File output subpath is loading whole path #38680

Closed
opened 2014-02-17 15:35:36 +01:00 by Cenek Strichel · 7 comments

System Information
Windows 7 x64

Blender Version
cc7cfd6

Short description of error
I wonder why is my File output was not saving renderes. There is problem with absolute path which is setted when I click on browse button in File Output Properties.

subpath.png

I load whole path not only sub path, so renders was not saved. If you rewrite it manualy, it is ok:

subpath2.png

I think it is hard to solve, maybe delete Base path from subpath, after browsing location.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

**System Information** Windows 7 x64 **Blender Version** cc7cfd6 **Short description of error** I wonder why is my File output was not saving renderes. There is problem with absolute path which is setted when I click on browse button in File Output Properties. ![subpath.png](https://archive.blender.org/developer/F77769/subpath.png) I load whole path not only sub path, so renders was not saved. If you rewrite it manualy, it is ok: ![subpath2.png](https://archive.blender.org/developer/F77771/subpath2.png) I think it is hard to solve, maybe delete Base path from subpath, after browsing location. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Cenda

Added subscriber: @Cenda
Lukas Tönne was assigned by Sergey Sharybin 2014-02-17 15:51:06 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

This issue was referenced by blender/blender-addons-contrib@266e1b3b4f

This issue was referenced by blender/blender-addons-contrib@266e1b3b4f67ba320af16f4a1f806e49c3f9de25

This issue was referenced by 266e1b3b4f

This issue was referenced by 266e1b3b4f67ba320af16f4a1f806e49c3f9de25
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 266e1b3b4f.

Closed by commit 266e1b3b4f.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38680
No description provided.