Fix T38680: File output subpath file-select operator uses absolute path.

This is because the sub-paths of the individual sockets are defined as
FILEPATH properties, which automatically adds the standard fileselect
operator button in the uiLists. However, that operator returns full
paths only, with no direct way to make them relative to the base path.

So for now i've turned the subpath properties into regular strings,
which removes these operator buttons but should at least avoid the
confusion.

Eventually new operators could be defined for this, which use the file-
select operator and then make the path relative.